examples/testing/negative_costs-lower_bounds/ex3.ces

eq(b(X,Y), 2 ,[a(X),b(X ,Y- 1)], [Y>=1]).
eq(b(X,Y), 1 ,[a(X)], []).

eq(a(X), 1 ,[c(X - 1)], [X>=1]).
eq(a(X), -1,[], [X=0]).

eq(c(X), -2 ,[a(X)], []).


